--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -5,4 +5,9 @@
 <body>
 Hope you enjoy our bootz!
 </body>
+<nav>
+	<a href="moon_bootz/contact.html">Contact Us<a>
+	<a href="moon_bootz/product_details.html">Product Details<a>
+	<a href="moon_bootz/legal/waiver.html">Waiver<a>
+</nav>
 </html>
