added images to waiver and index pages

--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -5,6 +5,11 @@
 <body>
 Hope you enjoy our bootz!
 </body>
+<img src="images/blue_moon.jpg" alt="blue moon"/>
+<img src="images/our_moon.jpg" alt="our moon"/>
+<p>Photo Courtesy of: Deborah from Visions in the Woods</p>
+<a href="http://www.visionsinthewoods.com/resources/-moon-a.jpg">Moon Phase Original</a>
+<a href="http://www.visionsinthewoods.com/about-us.php">Licensing</a>
 <nav>
 	<a href="moon_bootz/contact.html">Contact Us<a>
 	<a href="moon_bootz/product_details.html">Product Details<a>
