--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -3,6 +3,10 @@
 <head>
   <title>Legal Waiver</title>
 </head>
+<img src="images/waiver_moon.jpg" alt="waive moon"/>
+<p> Photo by: NASA/JPL-Caltech/Space Science Institute</p>
+<a href="http://www.nasa.gov/sites/default/files/thumbnails/image/dione_preflybyimage_rotated_16.jpg/">Waiver Moon Original</a>
+<a href="https://www.nasa.gov/ames-partnerships/opportunities/licensing/">Licensing</a>
 <body>
   <p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
 </body>
