add html to webpage

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -6,5 +6,19 @@
 <body>
 	<h1> First Webpage! 
 	</h1>
+	<p>  This is my <em>first</em> webpage! So exciting! Let's talk about 
+		<strong>Australia.</strong> 
+		<ul>
+			<li>The beaches</li> 
+			<li>The wildlife</li>
+			<li>The weather</li>
+		</ul>
+		<ol>
+			<li>The beaches are amazing! However, the farther north you go, the more crocodiles there are!</li>
+			<li>The wildlife is amazing. There are 416 species of butterflies and over 22,000 moths in Australia.</li>
+			<li>The weather is interesting. The north east side if very wet/tropical. However the south does cool off quite a bit in the winter months (their winter that is).</li>
+		</ol>
+		checkout more <a href="http://www.australia.com/en-us">here</a>
+	</p>
 </body>
 </html>
