--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -28,3 +28,32 @@
 </table>
 </body>
 </html>
+
+<html>
+<head>
+  <title>Another Table</title>
+</head>
+<body>
+<table border=1>
+  <tr>
+    <th>h1</th>
+    <th>h2</th>
+    <th>h3</th>
+  </tr>
+  <tr>
+    <td rowspan="2">HELLO</td>
+    <td>cell-2</td>
+    <td>cell-3</td>
+  </tr>
+  <tr>
+    
+    <td colspan="2">HI Hello</td>
+  </tr>
+  <tr>
+    <td>:)</td>
+    <td>:/</td>
+    <td>:)</td>
+  </tr>
+</table>
+</body>
+</html>
