--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,11 +5,11 @@
 </head>
 <body>
     <div>
-    	<img src="glasses.png" alt="glasses">
-        <img src="hat.png" alt="hat">
+    	<img src="glasses.png" id="glasses" alt="glasses">
+        <img src="hat.png" id="hat" alt="hat">
     </div>
   <p>
-	<img src="octopus.png" alt="octopus">
+	<img src="octopus.png" id="octopus" alt="octopus">
   </p>
 </body>
 </html>
