complete jquery challenge

--- a/web_dev/jquery/index.html
+++ b/web_dev/jquery/index.html
@@ -8,9 +8,7 @@
                 $("p").hide();
             });
             $("#btn1").click(function(){
-            $("h2").append("A superfood contains high levels of vitamins and minerals. They also can be a great source of antioxidants.");
-            });
-            $("#btn1").click(function(){
+                $("h2").append("A superfood contains high levels of vitamins and minerals. They also can be a great source of antioxidants.");
                 $("#acai").fadeIn(3000);
             });
         });
@@ -41,7 +39,7 @@
 
     <button id="btn2">Click here to hide the paragraphs and just get the cold hard facts!</button>
     <div>
-    <img id="acai" src="http://static.squarespace.com/static/519e9295e4b046d94a963169/519e9295e4b046d94a96317a/519ed9c5e4b0a14ac5eaa6d5/1369366700900/IMG_8208-1995458685-O.jpg?format=1500w" width="868" height="578"></img>
+    <img style="display: none;" id="acai" src="http://static.squarespace.com/static/519e9295e4b046d94a963169/519e9295e4b046d94a96317a/519ed9c5e4b0a14ac5eaa6d5/1369366700900/IMG_8208-1995458685-O.jpg?format=1500w" width="868" height="578"></img>
 </div>
 
 </body>
